# pylint-calisthenics

./: .flake8  .gitignore  .pdm.toml  license.txt  pyproject.toml
.github/workflows/: release.yml  tests.yml
pylint_calisthenics/: __init__.py  first_class_collections.py  no_else.py  no_properties.py  one_dot_per_line.py  small_entities.py  two_instance_variables.py
samples/: sample.py
