[project]
name = "pylint-calisthenics"
version = "0.1.0"
description = "Implements Object Calisthenics for pylint"
authors = [
    {name = "Miguel Angel Garcia", email = "miguelangel.garcia@gmail.com"},
]
license = {text = "BSD"}
dependencies = []
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
