[project]
name = "pylint-calisthenics"
version = "0.1.0"
description = "Implements Object Calisthenics for pylint"
authors = [
    {name = "Miguel Angel Garcia", email = "miguelangel.garcia@gmail.com"},
]
license = {text = "BSD"}
dependencies = [
    "six>=1.16.0",
]
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pylint==3.2.6",
    "pylint-testutils>=0.0.0",
    "pytest-cov>=5.0.0",
]
